# ur5_pick_and_place

./: .gitignore  .gitmodules  LICENSE  README.md  README.txt  diffkin.h  main.cpp  newInv.cpp  ur5_generic.py
first_deadline/: README.md
first_deadline/scripts/motion/: keyPub.py  mypublisher.py
first_deadline/scripts/vision/: vision.py
kinematics/: fromMatlab.cpp  newInv.cpp  newpublisher.cpp  publisher.cpp
kinematics/communication/: CMakeLists.txt  package.xml
kinematics/communication/msg/: dest_point.msg
kinematics/communication/src/: newpublisher.cpp  posPublisher.cpp  publisher.cpp
lego_models/: lego.world
models/: README.TXT  README.md  README.txt
motion/: CMakeLists.txt  README.md
motion/include/: kinematics.cpp  kinematics.h
motion/src/: invDiffKinematics.cpp  motionPlanner.cpp  p2pMotion.cpp  taskManager.cpp
spawnblocks/: Readme.md  legopiece1.world  legopiece2.world  legopiece3.world  ur5_generic.py
vision/: cameraNode.py  visionpoorcomment.py
vision/scripts/: LegoDetect.py  RegionOfInterest.py  Vision.py  VisionNode.py  detect_single_img.ipynb  world_random_generator.py
vision/scripts/log/: test.py
